# coursework_6

./: .env.sample  README.md  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_blog_preview.py  0002_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0002_log_log_client.py  0002_mailing_mailing_client.py  0003_alter_mailing_mailing_status.py  0004_alter_mailing_mailing_client.py  0005_alter_client_client_owner_and_more.py  0006_message_message_owner.py  0007_alter_mailing_mailing_log.py  0008_alter_mailing_mailing_period_and_more.py  0009_remove_mailing_mailing_client_and_more.py  0010_alter_log_log_status.py  0011_alter_log_log_status.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_form.html  client_list.html  log_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_form.html  message_list.html
mailing/templates/mailing/includes/: inc_mailing_bottom_menu.html  inc_mailing_up_menu.html
users/: forms.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0003_alter_user_is_active.py
users/templates/users/: login.html  register.html  user_form.html  user_list.html
